recursion.cons.occurrences.Occurrences.scala.error
Compilation error:
Occurrences:8: error: not found: value occurences
    return occurences(l.tail,v)
           ^